Fix Slider Text Wrap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -609,12 +609,12 @@ a:hover {
             margin-right: auto;
             margin-left: auto;
             position: absolute;
-            bottom: 180px;
+            bottom: 100px;
             text-align: center;
             &.first {
                 height: 309px;
                 margin: 23px auto 10px;
-                bottom: 240px;
+                bottom: 160px;
             }
             img {
                 height: 100%;
@@ -632,7 +632,7 @@ a:hover {
     .carousel-dots {
         text-align: center;
         position: absolute;
-        bottom: 122px;
+        bottom: 32px;
         z-index: 1001;
         width: 100%;
         a {
@@ -652,7 +652,7 @@ a:hover {
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 230px;
+        height: 150px;
         background: url("assets/i/bottom-gray.png") no-repeat;
         background-size: cover;
         z-index: 10;
